--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -8,18 +8,27 @@
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.shape.*?>
+<?import javafx.scene.text.*?>
 <?scenebuilder-background-color 0xb4b4b4ff?>
 
-<AnchorPane id="AnchorPane" fx:id="basePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns:fx="http://javafx.com/fxml" fx:controller="smp.fx.SMPFXController">
+<AnchorPane id="AnchorPane" fx:id="basePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml" fx:controller="smp.fx.SMPFXController">
   <children>
     <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#b4b4b4" height="600.0" stroke="BLACK" strokeType="INSIDE" width="800.0" />
     <BorderPane id="MainLayout" fx:id="mainLayout" blendMode="SRC_OVER" layoutX="2.0" layoutY="2.0" prefHeight="598.0" prefWidth="798.0">
       <bottom>
         <Pane id="BottomPane" blendMode="SRC_OVER" prefHeight="56.0" prefWidth="798.0">
           <children>
-            <TextArea id="SongName" layoutX="232.0" layoutY="14.0" prefHeight="32.0" prefWidth="390.0" text="Test" />
-            <HBox id="BottomLeftBox" prefHeight="56.0" prefWidth="232.0" />
-            <HBox id="BottomRightBox" layoutX="622.0" prefHeight="56.0" prefWidth="173.0" />
+            <HBox id="HBox" alignment="CENTER" spacing="5.0">
+              <children>
+                <HBox id="BottomLeftBox" prefHeight="56.0" prefWidth="232.0" />
+                <VBox id="VBox" alignment="CENTER" spacing="5.0">
+                  <children>
+                    <TextArea fx:id="songName" prefHeight="32.0" prefWidth="390.0" promptText="Song Name" />
+                  </children>
+                </VBox>
+                <HBox id="BottomRightBox" prefHeight="56.0" prefWidth="163.0" />
+              </children>
+            </HBox>
           </children>
         </Pane>
       </bottom>
@@ -87,13 +96,38 @@
                         </HBox>
                       </children>
                     </StackPane>
-                    <HBox id="ScrollbarHolder" alignment="CENTER" layoutX="17.0" layoutY="91.0" prefWidth="770.0" spacing="5.0">
+                    <HBox fx:id="scrollbarHolder" alignment="CENTER" layoutX="14.0" layoutY="91.0" prefHeight="16.0" prefWidth="770.0">
                       <children>
-                        <StackPane id="StackPane">
+                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                            <Image url="@sprites/SCROLLBAR_LEFT2.PNG" preserveRatio="false" smooth="false" />
+                          </image>
+                        </ImageView>
+                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                            <Image url="@sprites/SCROLLBAR_LEFT1.PNG" preserveRatio="false" smooth="false" />
+                          </image>
+                        </ImageView>
+                        <AnchorPane id="AnchorPane">
                           <children>
-                            <Rectangle id="ScrollbarMid" arcHeight="5.0" arcWidth="5.0" fill="#1e90ff00" height="16.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="700.0" />
+                            <ImageView fitHeight="16.0" fitWidth="700.0" pickOnBounds="true">
+                              <image>
+                                <Image url="@sprites/SCROLLBAR_MID.png" preserveRatio="false" smooth="false" />
+                              </image>
+                            </ImageView>
+                            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d299ff" height="16.0" stroke="BLACK" strokeLineCap="BUTT" strokeLineJoin="BEVEL" strokeType="INSIDE" strokeWidth="2.0" width="24.0" />
                           </children>
-                        </StackPane>
+                        </AnchorPane>
+                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                            <Image url="@sprites/SCROLLBAR_RIGHT1.PNG" preserveRatio="false" smooth="false" />
+                          </image>
+                        </ImageView>
+                        <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
+                          <image>
+                            <Image url="@sprites/SCROLLBAR_RIGHT2.png" preserveRatio="false" smooth="false" />
+                          </image>
+                        </ImageView>
                       </children>
                     </HBox>
                   </children>
@@ -108,15 +142,20 @@
           <children>
             <HBox fx:id="topBoxRight" layoutX="591.0" prefHeight="64.0" prefWidth="200.0" />
             <HBox fx:id="topBoxTop" layoutX="60.0" prefHeight="28.0" prefWidth="531.0" />
-            <HBox fx:id="instLine" layoutX="60.0" layoutY="30.0" prefHeight="28.0" prefWidth="531.0">
-              <children>
-                <ImageView fitHeight="28.0" fitWidth="531.0" pickOnBounds="true" preserveRatio="true" />
-              </children>
-            </HBox>
+            <HBox fx:id="instLine" layoutX="60.0" layoutY="30.0" prefHeight="28.0" prefWidth="531.0" spacing="2.0" />
             <StackPane fx:id="selectedInst" layoutX="3.0" layoutY="14.0" prefHeight="44.00010681152344" prefWidth="57.000099999997474" />
           </children>
         </Pane>
       </top>
     </BorderPane>
+    <Pane layoutX="800.0" layoutY="2.0" prefHeight="598.0" prefWidth="100.0">
+      <children>
+        <Button layoutX="4.0" layoutY="289.0" mnemonicParsing="false" text="Secret Button">
+          <font>
+            <Font size="12.0" />
+          </font>
+        </Button>
+      </children>
+    </Pane>
   </children>
 </AnchorPane>
