--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -18,9 +18,10 @@
       <bottom>
         <Pane id="BottomPane" blendMode="SRC_OVER" prefHeight="56.0" prefWidth="798.0">
           <children>
-            <HBox id="HBox" alignment="CENTER" spacing="5.0">
+            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f8e8b8" height="56.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="804.0" x="-4.0" />
+            <HBox id="HBox" alignment="CENTER" prefHeight="55.9998779296875" spacing="5.0">
               <children>
-                <HBox id="BottomLeftBox" prefHeight="56.0" prefWidth="232.0" />
+                <HBox id="BottomLeftBox" prefHeight="56.0001220703125" prefWidth="232.0" />
                 <VBox id="VBox" alignment="CENTER" spacing="5.0">
                   <children>
                     <TextArea fx:id="songName" prefHeight="32.0" prefWidth="390.0" promptText="Song Name" />
@@ -60,16 +61,16 @@
                 </Pane>
                 <Pane id="VolPaneHolder" prefHeight="64.0" prefWidth="798.0">
                   <children>
-                    <StackPane fx:id="volPane" layoutX="3.0">
+                    <AnchorPane id="AnchorPane" layoutX="3.0">
                       <children>
                         <Rectangle id="VolRect" arcHeight="5.0" arcWidth="5.0" blendMode="SRC_OVER" fill="$x1" height="64.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="792.0" y="-3.0" />
                       </children>
-                    </StackPane>
+                    </AnchorPane>
                   </children>
                 </Pane>
                 <Pane id="ControlsPane" prefHeight="121.0" prefWidth="798.0">
                   <children>
-                    <Rectangle id="ControlsRect" arcHeight="5.0" arcWidth="5.0" blendMode="SRC_OVER" fill="$x1" height="123.0" layoutX="3.0" layoutY="-2.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="792.0" />
+                    <Rectangle id="ControlsRect" arcHeight="5.0" arcWidth="5.0" blendMode="SRC_OVER" fill="$x1" height="123.0" layoutX="3.0" layoutY="-5.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="792.0" />
                     <StackPane fx:id="controls" layoutX="14.0" layoutY="7.0">
                       <children>
                         <HBox id="ControlsHolder" prefHeight="76.0" prefWidth="474.0">
@@ -110,12 +111,20 @@
                         </ImageView>
                         <AnchorPane id="AnchorPane">
                           <children>
-                            <ImageView fitHeight="16.0" fitWidth="700.0" pickOnBounds="true">
-                              <image>
-                                <Image url="@sprites/SCROLLBAR_MID.png" preserveRatio="false" smooth="false" />
-                              </image>
-                            </ImageView>
-                            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#d299ff" height="16.0" stroke="BLACK" strokeLineCap="BUTT" strokeLineJoin="BEVEL" strokeType="INSIDE" strokeWidth="2.0" width="24.0" />
+                            <StackPane id="StackPane">
+                              <children>
+                                <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#ffffff00" height="16.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="700.0">
+                                  <rotationAxis>
+                                    <Point3D />
+                                  </rotationAxis>
+                                </Rectangle>
+                                <Slider fx:id="scrollbar" blockIncrement="4.0" max="384.0" minorTickCount="1" prefWidth="690.0">
+                                  <rotationAxis>
+                                    <Point3D />
+                                  </rotationAxis>
+                                </Slider>
+                              </children>
+                            </StackPane>
                           </children>
                         </AnchorPane>
                         <ImageView fitHeight="16.0" fitWidth="16.0" pickOnBounds="true" preserveRatio="true">
@@ -142,8 +151,66 @@
           <children>
             <HBox fx:id="topBoxRight" layoutX="591.0" prefHeight="64.0" prefWidth="200.0" />
             <HBox fx:id="topBoxTop" layoutX="60.0" prefHeight="28.0" prefWidth="531.0" />
-            <HBox fx:id="instLine" layoutX="60.0" layoutY="30.0" prefHeight="28.0" prefWidth="531.0" spacing="2.0" />
-            <StackPane fx:id="selectedInst" layoutX="3.0" layoutY="14.0" prefHeight="44.00010681152344" prefWidth="57.000099999997474" />
+            <HBox fx:id="instLine" layoutX="60.0" layoutY="30.0" prefHeight="28.0" prefWidth="531.0" spacing="2.0">
+              <children>
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@sprites/MARIO_SM.png" preserveRatio="false" smooth="false" />
+                  </image>
+                </ImageView>
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@sprites/MUSHROOM_SM.png" preserveRatio="false" smooth="false" />
+                  </image>
+                </ImageView>
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@sprites/YOSHI_SM.PNG" preserveRatio="false" smooth="false" />
+                  </image>
+                </ImageView>
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@sprites/STAR_SM.PNG" preserveRatio="false" smooth="false" />
+                  </image>
+                </ImageView>
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@sprites/FLOWER_SM.PNG" preserveRatio="false" smooth="false" />
+                  </image>
+                </ImageView>
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@sprites/GAMEBOY_SM.PNG" preserveRatio="false" smooth="false" />
+                  </image>
+                </ImageView>
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@sprites/DOG_SM.PNG" preserveRatio="false" smooth="false" />
+                  </image>
+                </ImageView>
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+                <ImageView fitHeight="28.0" fitWidth="26.0" pickOnBounds="true" preserveRatio="true" />
+              </children>
+            </HBox>
+            <StackPane fx:id="selectedInst" layoutX="6.0" layoutY="24.0" prefHeight="38.0" prefWidth="52.0">
+              <children>
+                <ImageView fitHeight="38.0" fitWidth="52.0" pickOnBounds="true" preserveRatio="true">
+                  <image>
+                    <Image url="@sprites/SEL_INST_BG.png" preserveRatio="false" smooth="false" />
+                  </image>
+                </ImageView>
+              </children>
+            </StackPane>
           </children>
         </Pane>
       </top>
