--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -18,16 +18,70 @@
       <bottom>
         <Pane id="BottomPane" blendMode="SRC_OVER" prefHeight="56.0" prefWidth="798.0">
           <children>
-            <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#f8e8b8" height="56.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="2.0" width="804.0" x="-4.0" />
+            <ImageView fitHeight="56.0" fitWidth="800.0" pickOnBounds="true" preserveRatio="true">
+              <image>
+                <Image url="@sprites/BOTTOM_BAR.png" preserveRatio="false" smooth="false" />
+              </image>
+            </ImageView>
             <HBox id="HBox" alignment="CENTER" prefHeight="55.9998779296875" spacing="5.0">
               <children>
-                <HBox id="BottomLeftBox" prefHeight="56.0001220703125" prefWidth="232.0" />
-                <VBox id="VBox" alignment="CENTER" spacing="5.0">
+                <HBox id="BottomLeftBox" alignment="TOP_RIGHT" prefHeight="56.0" prefWidth="267.0">
                   <children>
-                    <TextArea fx:id="songName" focusTraversable="false" prefHeight="32.0" prefWidth="390.0" promptText="Song Name" />
+                    <Pane prefHeight="56.0" prefWidth="239.0">
+                      <children>
+                        <HBox alignment="CENTER" prefHeight="56.0" prefWidth="242.0" spacing="14.0">
+                          <children>
+                            <ImageView fitHeight="28.0" fitWidth="54.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                <Image url="@sprites/SAVE.png" preserveRatio="false" smooth="false" />
+                              </image>
+                            </ImageView>
+                            <ImageView fitHeight="28.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                <Image url="@sprites/LOAD.png" preserveRatio="false" smooth="false" />
+                              </image>
+                            </ImageView>
+                            <ImageView fitHeight="28.0" fitWidth="58.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                <Image url="@sprites/NEW_SONG.png" preserveRatio="false" smooth="false" />
+                              </image>
+                            </ImageView>
+                          </children>
+                        </HBox>
+                      </children>
+                    </Pane>
+                  </children>
+                </HBox>
+                <VBox id="VBox" alignment="CENTER" prefHeight="56.0" prefWidth="360.0" spacing="5.0">
+                  <children>
+                    <StackPane id="StackPane">
+                      <children>
+                        <TextArea fx:id="songName" focusTraversable="false" prefHeight="32.0" prefWidth="390.0" promptText="Song Name">
+                          <StackPane.margin>
+                            <Insets />
+                          </StackPane.margin>
+                        </TextArea>
+                      </children>
+                    </StackPane>
                   </children>
                 </VBox>
-                <HBox id="BottomRightBox" prefHeight="56.0" prefWidth="163.0" />
+                <HBox id="BottomRightBox" prefHeight="56.0" prefWidth="144.0">
+                  <children>
+                    <Pane prefHeight="56.0" prefWidth="116.0">
+                      <children>
+                        <HBox alignment="CENTER" prefHeight="55.9998779296875" prefWidth="116.0">
+                          <children>
+                            <ImageView fitHeight="28.0" fitWidth="80.0" pickOnBounds="true" preserveRatio="true">
+                              <image>
+                                <Image url="@sprites/OPTIONS.png" preserveRatio="false" smooth="false" />
+                              </image>
+                            </ImageView>
+                          </children>
+                        </HBox>
+                      </children>
+                    </Pane>
+                  </children>
+                </HBox>
               </children>
             </HBox>
           </children>
