Framework for instrument sprites

--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -117,6 +117,28 @@
                         </ImageView>
                       </children>
                     </StackPane>
+                    <HBox fx:id="staffInstruments" alignment="CENTER_LEFT" layoutX="20.0" layoutY="10.0" prefHeight="276.0" prefWidth="758.0" spacing="62.0">
+                      <padding>
+                        <Insets left="144.0" />
+                      </padding>
+                    </HBox>
+                    <HBox id="staffMLines" fx:id="staffPlayBars" alignment="CENTER_LEFT" layoutX="20.0" layoutY="8.0" prefHeight="281.0" prefWidth="758.0" spacing="8.0">
+                      <children>
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                        <ImageView fitHeight="281.0" fitWidth="56.0" pickOnBounds="true" preserveRatio="true" />
+                      </children>
+                      <padding>
+                        <Insets left="116.0" />
+                      </padding>
+                    </HBox>
                     <HBox fx:id="staffMLines" alignment="CENTER_LEFT" layoutX="20.0" layoutY="10.0" prefHeight="276.0" prefWidth="758.0" spacing="62.0">
                       <children>
                         <ImageView fitHeight="274.0" fitWidth="2.0" pickOnBounds="true" preserveRatio="true" />
@@ -130,16 +152,6 @@
                         <ImageView fitHeight="274.0" fitWidth="2.0" pickOnBounds="true" preserveRatio="true" />
                         <ImageView fitHeight="274.0" fitWidth="2.0" pickOnBounds="true" preserveRatio="true" />
                       </children>
-                      <padding>
-                        <Insets left="144.0" />
-                      </padding>
-                    </HBox>
-                    <HBox fx:id="staffPlayBars" alignment="CENTER_LEFT" layoutX="20.0" layoutY="10.0" prefHeight="276.0" prefWidth="758.0" spacing="62.0">
-                      <padding>
-                        <Insets left="144.0" />
-                      </padding>
-                    </HBox>
-                    <HBox fx:id="staffInstruments" alignment="CENTER_LEFT" layoutX="20.0" layoutY="10.0" prefHeight="276.0" prefWidth="758.0" spacing="62.0">
                       <padding>
                         <Insets left="144.0" />
                       </padding>
