--- a/MainWindow.fxml
+++ b/MainWindow.fxml
@@ -103,6 +103,14 @@
               <children>
                 <Pane id="StaffFrame" prefHeight="300.0" prefWidth="798.0">
                   <children>
+                    <HBox id="staffInstruments" alignment="CENTER_LEFT" layoutX="20.0" layoutY="12.0" prefHeight="48.0" prefWidth="758.0" spacing="32.0">
+                      <children>
+                        <Rectangle height="4.0" smooth="false" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="50.0" />
+                      </children>
+                      <padding>
+                        <Insets left="161.0" />
+                      </padding>
+                    </HBox>
                     <HBox id="staffInstruments" fx:id="staffAccidentals" alignment="CENTER_LEFT" layoutX="20.0" layoutY="2.0" prefHeight="300.0" prefWidth="758.0" spacing="32.0">
                       <children>
                         <VBox id="VBox" alignment="CENTER" spacing="-20.0" HBox.hgrow="NEVER">
